tests/by-name-failure/expected
trace: This should be on stderr!
error:
       … while evaluating list element at index 3

       … while evaluating list element at index 1

       … while evaluating attribute 'ByName'

         at src/eval.nix:77:7:

           76|       inherit name;
           77|       value.ByName =
             |       ^
           78|         if !pkgs ? ${name} then

       (stack trace truncated; use '--show-trace' to show the full trace)

       error: This is an error!
- Nix evaluation failed for some package in `pkgs/by-name`, see error above
This PR introduces the problems listed above. Please fix them before merging, otherwise the base branch would break.
